<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/expressionTextView"
        style="@style/expression_result_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/boundGuideLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:hint="@string/text_zero"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/boundGuideLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        app:layout_constraintTop_toBottomOf="@id/expressionTextView" />

    <TextView
        android:id="@+id/resultTextView"
        style="@style/expression_result_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/resultAndButtonBoundaryGuideLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/boundGuideLine" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/resultAndButtonBoundaryGuideLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"
        app:layout_constraintTop_toBottomOf="@id/resultTextView" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/buttonFlow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="btn1, btn2, btn3,btnClear, btn4, btn5, btn6, btnPlus
        ,btn7,btn8,btn9, btnMinus, btn0,btnDot, btnEquals"
        app:flow_maxElementsWrap="4"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:flow_horizontalGap="8dp"
        app:layout_constraintTop_toBottomOf="@id/resultAndButtonBoundaryGuideLine" />

    <Button
        android:id="@+id/btn1"
        style="@style/numberPad"
        android:text="@string/text_one"
        android:onClick="clickButton"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn2"
        style="@style/numberPad"
        android:text="@string/text_two"
        android:onClick="clickButton"

        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn3"
        style="@style/numberPad"
        android:text="@string/text_three"
        android:onClick="clickButton"

        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnClear"
        style="@style/operatorPad"
        android:text="@string/text_clear"
        android:onClick="clearClicked"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn4"
        style="@style/numberPad"
        android:text="@string/text_four"
        android:onClick="clickButton"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn5"
        style="@style/numberPad"
        android:text="@string/text_five"
        android:onClick="clickButton"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn6"
        style="@style/numberPad"
        android:text="@string/text_six"
        android:onClick="clickButton"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnPlus"
        style="@style/operatorPad"
        android:text="@string/text_plus"
        android:onClick="clickButton"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn7"
        style="@style/numberPad"
        android:text="@string/text_seven"
        android:onClick="clickButton"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn8"
        style="@style/numberPad"
        android:text="@string/text_eight"
        android:onClick="clickButton"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn9"
        style="@style/numberPad"
        android:text="@string/text_nine"
        android:onClick="clickButton"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnMinus"
        style="@style/operatorPad"
        android:text="@string/text_minus"
        android:onClick="clickButton"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn0"
        style="@style/numberPad"
        android:text="@string/text_zero"
        android:onClick="clickButton"
        tools:ignore="MissingConstraints"
        app:layout_constraintHorizontal_weight="1"/>

    <Button
        android:id="@+id/btnDot"
        style="@style/numberPad"
        android:text="@string/text_dot"
        android:onClick="clickButton"
        tools:ignore="MissingConstraints"
        app:layout_constraintHorizontal_weight="1"/>

    <Button
        android:id="@+id/btnEquals"
        style="@style/operatorPad"
        android:text="@string/text_equals"
        android:onClick="equalClicked"
        tools:ignore="MissingConstraints"
        app:layout_constraintHorizontal_weight="2"/>


</androidx.constraintlayout.widget.ConstraintLayout>